# garimpo-alpha-b3

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  PRD.md  README.md  garimpo-alpha-b3.pbix  pyproject.toml
.github/workflows/: ci.yml  pipeline.yml
.streamlit/: config.toml
dashboard/: README.md  app.py
data/: universo_ibrx100.csv
data_quality/: __init__.py
dbt/: README.md
docs/: 01-spike-viabilidade.md  02-decisoes-adr.md  03-dicionario-de-dados.md
flows/: README.md
ingestion/: __init__.py  bcb.py  cvm.py  precos.py
notebooks/: README.md
scripts/: analise_survivorship.py  build_universo.py  check_db.py  exportar_curva_backtest.py  run_backtest.py  run_bronze.py  run_bronze_vale.py  run_gold.py  run_gold_vale.py  run_ml_dataset.py  run_ml_treino.py  run_montecarlo.py  run_pipeline.py  run_prices.py  run_silver.py  run_silver_vale.py
src/: __init__.py  backtest.py  config.py  db.py  gold.py  silver.py  universo.py
src/fundamental/: __init__.py  buffett.py  dcf.py  ev_ebitda.py  graham.py  lynch.py  score.py  selos.py
src/ml/: __init__.py  dataset.py  treino.py
src/montecarlo/: __init__.py  portfolio.py  valuation.py
tests/: test_backtest.py  test_buffett.py  test_config.py  test_dcf.py  test_ev_ebitda.py  test_graham.py  test_lynch.py  test_ml_dataset.py  test_ml_treino.py  test_montecarlo.py  test_score.py  test_selos.py  test_silver.py
